# DL_DIADEM

./: .gitignore  README.md  main.py  pyproject.toml
Classification/: pyproject.toml
Classification/Notebooks/: 01-DL_Reproducibiliy.ipynb  02-Trainning_Evaluation-Copy1.ipynb  02-Trainning_Evaluation.ipynb  03-Hyperparam_tunning-Copy1.ipynb  03-Hyperparam_tunning.ipynb  04-CNN_image_classification.ipynb  README.md  SOL-01-DL_Reproducibiliy.ipynb  SOL-02-Trainning_Evaluation.ipynb  SOL-03-Hyperparam_tunning.ipynb  SOL-04-CNN_image_classification-Copy1.ipynb
Classification/Notebooks/Solutions/: SOL-01-DL_Reproducibiliy.html  SOL-02-Trainning_Evaluation.html  SOL-03-Hyperparam_tunning.html  SOL-04-CNN_image_classification.html
Classification/Notebooks/utils/: kaggle.py  tools.py
Notebooks/: 01-DL_Reproducibiliy-MNIST_DNN.ipynb  01-DL_Reproducibiliy.ipynb  01_Classify_MNIST_images_DNN-Copy1.ipynb  02_Classify_MNIST_images_DNN_dropout_norm.ipynb  03_Classify_micrographs_CNN.ipynb
ObjectDetection/: pyproject.toml
ObjectDetection/Notebooks/: Detect_Fibers.ipynb  eval.py  train.py
ObjectDetection/Notebooks/YOLO-trained/batch-02_epo-120/: args.yaml  results.csv
ObjectDetection/Notebooks/YOLO-trained/batch-16_epo-020/: args.yaml
ObjectDetection/Notebooks/YOLO-trained/batch-16_epo-120/: args.yaml  results.csv
ObjectDetection/Notebooks/YOLO-trained/batch-32_epo-020/: args.yaml  results.csv
ObjectDetection/Notebooks/YOLO-trained/batch-64_epo-020/: args.yaml  results.csv
ObjectDetection/Training/: eval.py  predict.py  train.py
labelImages/: main.py  pyproject.toml
(+487 files in other folders)
