[project]
name = "dl-diadem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gputil>=1.4.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "py-cpuinfo>=9.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow==2.17",
]
