[project]
name = "dl-diadem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gputil",
    "jupyter",
    "matplotlib",
    "opencv-python",
    "pandas",
    "py-cpuinfo",
    "scikit-learn",
    "seaborn",
    "tensorflow==2.17",
]
