[project]
name = "objectdetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.7",
    "lab>=8.9",
    "labelimg>=1.8.6",
    "matplotlib>=3.10.9",
    "ultralytics>=8.4.48",
]
